--- a/index.html
+++ b/index.html
@@ -310,10 +310,54 @@
                 </div>
             </div>
         </div>
+        <div class="flex flex-col gap-[70px] pt-[120px] container mx-auto">
+            <p class="text-[#2B2824] text-[60px] text-center">Новое прочтение</p>
+        </div>     
+        <div class="flex flex-col gap-[70px] py-[190px] container mx-auto">
+            <p class="text-[#2B2824] text-[60px] text-center">Немного о писателе</p>
+            <div class="flex items-start gap-14">
+                <div class="flex flex-col gap-11 w-[40%]">
+                    <div class="flex flex-col gap-5">
+                        <img src="Assets/Images/main/avatar.png" alt="">
+                        <div class="text-[#2B2824] flex items-end gap-2">
+                            <p class="text-[60px] leading-[100.926%]">Виктор <br> Драгунский</p>
+                            <p class="font-semibold text-[35px]">(1913 - 1972 гг.)</p>
+                        </div>
+                    </div>
+                    <p class="text-[#4D4D4D] text-[35px] font-semibold">Писатель-прозаик, поэт, классик советской литературы.</p>
+                </div>
+                <div class="flex flex-col gap-8 w-[60%] text-[35px]">
+                    <p class="text-[#2B2824] leading-[100.926%]">Детские годы</p>
+                    <p class="text-[#4D4D4D] leading-[100.926%] font-[450]">
+                        Виктор Юзефович Драгунский родился 1 декабря 1913 года <br>в Нью-Йорке. Родители будущего писателя были белорусскими эмигрантами. Жизнь семьи Драгунских в Америке не сложилась, поэтому в 1914 году они вернулись в Белоруссию <br>в Гомель. Здесь и прошло детство Виктора Юзефовича. <br>В 1918 году от тифа умирает отец Виктора. В 1925 году мальчик с матерью и отчимом переезжает в Москву.
+                    </p>
+                    <p class="text-[#2B2824] leading-[100.926%]">Начало творческой деятельности</p>
+                    <p class="text-[#4D4D4D] leading-[100.926%] font-[450]">
+                        Семья Виктора находилась в тяжелом материальном положении, поэтому ему пришлось рано пойти работать.  <br>С 1930 года Драгунский начал посещать «Литературно-театральные мастерские» А. Дикого. 
+                        В 1935 году был принят в труппу Театра транспорта. Позже Драгунский работал в цирке, некоторое время играл в Театре сатиры. Кроме театра, Виктора Юзефовича влекала литературная деятельность, он писал юморески, интермедии, фельетоны, сценки, цирковые клоунады и др. 
+                        В 1940 году произведения Драгунского впервые появились в печати. В 1945 году его приглашают работать в Театр-студию киноактера. В 1947 году Драгунский снялся в фильме «Русский вопрос» режиссера М. Ромма.
+                    </p>
+                    <p class="text-[#2B2824] leading-[100.926%]">“Синяя птичка”</p>
+                    <p class="text-[#4D4D4D] leading-[100.926%] font-[450]">
+                        В 1948 году Виктор Юзефович создает пародийный «театр в театре», назвав его «Синяя птичка». Вскоре к труппе присоединились Л. Давидович, Я. Костюковский, В. Дыховичный, М. Глузский, М. Слободской, Л. Сухаревская, Р. Быков, В. Бахнов, Е. Моргунов и другие. 
+                        Для некоторых постановок Драгунский писал тексты песен.
+                        Театр «Синяя птичка» стал известен в Москве. Труппу неоднократно приглашали со спектаклями в Дом актера. <br>Но в 1958 году театр прекратил свою деятельность.
+                    </p>
+                    <p class="text-[#2B2824] leading-[100.926%]">Зрелое литературное творчество</p>
+                    <p class="text-[#4D4D4D] leading-[100.926%] font-[450]">
+                        В 1959 году в печати впервые появляются произведения писателя Драгунского для детей из серии «Денискины рассказы». Они принесли автору большую популярность. Многие из рассказов были экранизированы.
+                        В 1960 году был опубликован сборник юмористической прозы писателя «Железный характер». В 1961 году вышла военная повесть «Он упал на траву», в 1964 году – повесть «Сегодня и ежедневно» о цирковой жизни.
+                        6 мая 1972 года Виктор Юзефович Драгунский умер в Москве. Похоронили писателя на Ваганьковском кладбище.
+                    </p>
+                </div>
+            </div>
+        </div> 
     </main>
 
-    <footer>
-
+    <footer class="flex flex-col w-full bg-[#2B2824] text-white py-12 items-center text-center gap-4 text-[35px] font-[450] leading-[100.926%]">
+        <p>Пономаренко (Иванова) А.А. <br> гр. 4-МЗ-5</p>
+        <span class="w-[294px] h-[2px] bg-white"></span>
+        <p>2023 г.</p>
     </footer>
     
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js" 
