--- a/index.html
+++ b/index.html
@@ -60,19 +60,22 @@
                         <path d="M24 3L3.41421 23.5858C2.63317 24.3668 2.63317 25.6332 3.41421 26.4142L24 47" stroke="white" stroke-opacity="0.2" stroke-width="5" stroke-linecap="round"/>
                     </svg>
                 </button>
-                <div class="flex flex-col gap-7 items-center text-center self-start">
+                <div class="flex flex-col gap-7 items-center text-center self-start relative">
                     <p class="text-[#AEAEAE]">Экранизация 1960 года</p>
-                    <img src="Assets/Images/main/slider1.png" alt="">
+                    <img src="Assets/Images/main/slider1.png" alt="" class="transition-all duration-500 grayscale hover:grayscale-0 peer">
+                    <img src="Assets/Images/main/play.svg" alt="" class="absolute top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 transition-all duration-500 peer-hover:opacity-0">
                     <p class="text-white">Весёлые истории</p>
                 </div>
-                <div class="flex flex-col gap-7 items-center text-center self-start">
+                <div class="flex flex-col gap-7 items-center text-center self-start relative">
                     <p class="text-[#AEAEAE]">Экранизация 1970 года</p>
-                    <img src="Assets/Images/main/slider2.png" alt="">
+                    <img src="Assets/Images/main/slider2.png" alt="" class="transition-all duration-500 grayscale hover:grayscale-0 peer">
+                    <img src="Assets/Images/main/play.svg" alt="" class="absolute top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 transition-all duration-500 peer-hover:opacity-0">
                     <p class="text-white">Денискины рассказы</p>
                 </div>
-                <div class="flex flex-col gap-7 items-center text-center self-start">
+                <div class="flex flex-col gap-7 items-center text-center self-start relative">
                     <p class="text-[#AEAEAE]">Экранизация 1979 года</p>
-                    <img src="Assets/Images/main/slider3.png" alt="">
+                    <img src="Assets/Images/main/slider3.png" alt="" class="transition-all duration-500 grayscale hover:grayscale-0 peer">
+                    <img src="Assets/Images/main/play.svg" alt="" class="absolute top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 transition-all duration-500 peer-hover:opacity-0">
                     <p class="text-white">Приключения <br> Дениса Кораблёва</p>
                 </div>
                 <button>
