--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="container mx-auto flex flex-col py-[190px] gap-[70px] items-center">
-            <p class="text-[60px] text-[#2B2824] text-center">“Денискины рассказы”</p>
+            <p class="text-[60px] text-[#2B2824] text-center Grotescque-Heavy">“Денискины рассказы”</p>
             <div class="grid grid-cols-3 gap-3 text-[#4D4D4D] text-[35px] text-center">
                 <p class="mix-blend-multiply leading-[40px]">Цикл рассказов, посвящённый случаям из жизни дошкольника, а затем ученика младших классов школы Дениса Кораблёва.</p>
                 <p class="mix-blend-multiply leading-[40px]">Прототипом главного героя рассказов стал сын писателя, Денис Драгунский</p>
@@ -64,19 +64,19 @@
                     <p class="text-[#AEAEAE]">Экранизация 1960 года</p>
                     <img src="Assets/Images/main/slider1.png" alt="" class="transition-all duration-500 grayscale hover:grayscale-0 peer">
                     <img src="Assets/Images/main/play.svg" alt="" class="absolute top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 transition-all duration-500 peer-hover:opacity-0">
-                    <p class="text-white">Весёлые истории</p>
+                    <p class="text-white Grotescque-Black">Весёлые истории</p>
                 </div>
                 <div class="flex flex-col gap-7 items-center text-center self-start relative">
                     <p class="text-[#AEAEAE]">Экранизация 1970 года</p>
                     <img src="Assets/Images/main/slider2.png" alt="" class="transition-all duration-500 grayscale hover:grayscale-0 peer">
                     <img src="Assets/Images/main/play.svg" alt="" class="absolute top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 transition-all duration-500 peer-hover:opacity-0">
-                    <p class="text-white">Денискины рассказы</p>
+                    <p class="text-white Grotescque-Black">Денискины рассказы</p>
                 </div>
                 <div class="flex flex-col gap-7 items-center text-center self-start relative">
                     <p class="text-[#AEAEAE]">Экранизация 1979 года</p>
                     <img src="Assets/Images/main/slider3.png" alt="" class="transition-all duration-500 grayscale hover:grayscale-0 peer">
                     <img src="Assets/Images/main/play.svg" alt="" class="absolute top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 transition-all duration-500 peer-hover:opacity-0">
-                    <p class="text-white">Приключения <br> Дениса Кораблёва</p>
+                    <p class="text-white Grotescque-Black">Приключения <br> Дениса Кораблёва</p>
                 </div>
                 <button>
                     <svg xmlns="http://www.w3.org/2000/svg" width="27" height="50" viewBox="0 0 27 50" fill="none">
@@ -100,7 +100,7 @@
             </div>
         </div>
         <div class="flex flex-col gap-[70px] items-center text-center pt-[190px] pb-[70px] bg-white backdrop-blur-[156.25px]">
-            <p class="text-[#2B2824] text-[60px]">Список произведений</p>
+            <p class="text-[#2B2824] text-[60px] Grotescque-Heavy">Список произведений</p>
             <ul class="grid grid-cols-3 gap-3 container mx-auto list-disc list-inside text-start">
                 <li>
                     <a href="" class="absolute text-[#4D4D4D] after:absolute after:left-0 after:bottom-0 after:bg-[#4D4D4D] after:w-0 after:h-px after:transition-all after:duration-500 hover:after:w-full">Англичанин Павля</a>
@@ -314,39 +314,39 @@
             </div>
         </div>
         <div class="flex flex-col gap-[70px] pt-[120px] container mx-auto">
-            <p class="text-[#2B2824] text-[60px] text-center">Новое прочтение</p>
+            <p class="text-[#2B2824] text-[60px] text-center Grotescque-Heavy">Новое прочтение</p>
         </div>     
         <div class="flex flex-col gap-[70px] py-[190px] container mx-auto">
-            <p class="text-[#2B2824] text-[60px] text-center">Немного о писателе</p>
+            <p class="text-[#2B2824] text-[60px] text-center Grotescque-Heavy">Немного о писателе</p>
             <div class="flex items-start gap-14">
                 <div class="flex flex-col gap-11 w-[40%]">
                     <div class="flex flex-col gap-5">
                         <img src="Assets/Images/main/avatar.png" alt="">
                         <div class="text-[#2B2824] flex items-end gap-2">
-                            <p class="text-[60px] leading-[100.926%]">Виктор <br> Драгунский</p>
+                            <p class="text-[60px] leading-[100.926%] Grotescque-Heavy">Виктор <br> Драгунский</p>
                             <p class="font-semibold text-[35px]">(1913 - 1972 гг.)</p>
                         </div>
                     </div>
                     <p class="text-[#4D4D4D] text-[35px] font-semibold">Писатель-прозаик, поэт, классик советской литературы.</p>
                 </div>
                 <div class="flex flex-col gap-8 w-[60%] text-[35px]">
-                    <p class="text-[#2B2824] leading-[100.926%]">Детские годы</p>
+                    <p class="text-[#2B2824] leading-[100.926%] Grotescque-Black">Детские годы</p>
                     <p class="text-[#4D4D4D] leading-[100.926%] font-[450]">
                         Виктор Юзефович Драгунский родился 1 декабря 1913 года <br>в Нью-Йорке. Родители будущего писателя были белорусскими эмигрантами. Жизнь семьи Драгунских в Америке не сложилась, поэтому в 1914 году они вернулись в Белоруссию <br>в Гомель. Здесь и прошло детство Виктора Юзефовича. <br>В 1918 году от тифа умирает отец Виктора. В 1925 году мальчик с матерью и отчимом переезжает в Москву.
                     </p>
-                    <p class="text-[#2B2824] leading-[100.926%]">Начало творческой деятельности</p>
+                    <p class="text-[#2B2824] leading-[100.926%] Grotescque-Black">Начало творческой деятельности</p>
                     <p class="text-[#4D4D4D] leading-[100.926%] font-[450]">
                         Семья Виктора находилась в тяжелом материальном положении, поэтому ему пришлось рано пойти работать.  <br>С 1930 года Драгунский начал посещать «Литературно-театральные мастерские» А. Дикого. 
                         В 1935 году был принят в труппу Театра транспорта. Позже Драгунский работал в цирке, некоторое время играл в Театре сатиры. Кроме театра, Виктора Юзефовича влекала литературная деятельность, он писал юморески, интермедии, фельетоны, сценки, цирковые клоунады и др. 
                         В 1940 году произведения Драгунского впервые появились в печати. В 1945 году его приглашают работать в Театр-студию киноактера. В 1947 году Драгунский снялся в фильме «Русский вопрос» режиссера М. Ромма.
                     </p>
-                    <p class="text-[#2B2824] leading-[100.926%]">“Синяя птичка”</p>
+                    <p class="text-[#2B2824] leading-[100.926%] Grotescque-Black">“Синяя птичка”</p>
                     <p class="text-[#4D4D4D] leading-[100.926%] font-[450]">
                         В 1948 году Виктор Юзефович создает пародийный «театр в театре», назвав его «Синяя птичка». Вскоре к труппе присоединились Л. Давидович, Я. Костюковский, В. Дыховичный, М. Глузский, М. Слободской, Л. Сухаревская, Р. Быков, В. Бахнов, Е. Моргунов и другие. 
                         Для некоторых постановок Драгунский писал тексты песен.
                         Театр «Синяя птичка» стал известен в Москве. Труппу неоднократно приглашали со спектаклями в Дом актера. <br>Но в 1958 году театр прекратил свою деятельность.
                     </p>
-                    <p class="text-[#2B2824] leading-[100.926%]">Зрелое литературное творчество</p>
+                    <p class="text-[#2B2824] leading-[100.926%] Grotescque-Black">Зрелое литературное творчество</p>
                     <p class="text-[#4D4D4D] leading-[100.926%] font-[450]">
                         В 1959 году в печати впервые появляются произведения писателя Драгунского для детей из серии «Денискины рассказы». Они принесли автору большую популярность. Многие из рассказов были экранизированы.
                         В 1960 году был опубликован сборник юмористической прозы писателя «Железный характер». В 1961 году вышла военная повесть «Он упал на траву», в 1964 году – повесть «Сегодня и ежедневно» о цирковой жизни.
