--- a/index.html
+++ b/index.html
@@ -60,22 +60,28 @@
                         <path d="M24 3L3.41421 23.5858C2.63317 24.3668 2.63317 25.6332 3.41421 26.4142L24 47" stroke="white" stroke-opacity="0.2" stroke-width="5" stroke-linecap="round"/>
                     </svg>
                 </button>
-                <div class="flex flex-col gap-7 items-center text-center self-start relative">
+                <div class="flex flex-col gap-7 items-center text-center self-start">
                     <p class="text-[#AEAEAE]">Экранизация 1960 года</p>
-                    <img src="Assets/Images/main/slider1.png" alt="" class="transition-all duration-500 grayscale hover:grayscale-0 peer">
-                    <img src="Assets/Images/main/play.svg" alt="" class="absolute top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 transition-all duration-500 peer-hover:opacity-0">
+                    <div class="group relative">
+                        <img src="Assets/Images/main/slider1.png" alt="" class="transition-all duration-500 grayscale group-hover:grayscale-0">
+                        <img src="Assets/Images/main/play.svg" alt="" class="absolute top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 transition-all duration-500 group-hover:opacity-0">
+                    </div>
                     <p class="text-white Grotescque-Black">Весёлые истории</p>
                 </div>
-                <div class="flex flex-col gap-7 items-center text-center self-start relative">
+                <div class="flex flex-col gap-7 items-center text-center self-start">
                     <p class="text-[#AEAEAE]">Экранизация 1970 года</p>
-                    <img src="Assets/Images/main/slider2.png" alt="" class="transition-all duration-500 grayscale hover:grayscale-0 peer">
-                    <img src="Assets/Images/main/play.svg" alt="" class="absolute top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 transition-all duration-500 peer-hover:opacity-0">
+                    <div class="group relative">
+                        <img src="Assets/Images/main/slider2.png" alt="" class="transition-all duration-500 grayscale group-hover:grayscale-0">
+                        <img src="Assets/Images/main/play.svg" alt="" class="absolute top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 transition-all duration-500 group-hover:opacity-0">
+                    </div>
                     <p class="text-white Grotescque-Black">Денискины рассказы</p>
                 </div>
-                <div class="flex flex-col gap-7 items-center text-center self-start relative">
+                <div class="flex flex-col gap-7 items-center text-center self-start">
                     <p class="text-[#AEAEAE]">Экранизация 1979 года</p>
-                    <img src="Assets/Images/main/slider3.png" alt="" class="transition-all duration-500 grayscale hover:grayscale-0 peer">
-                    <img src="Assets/Images/main/play.svg" alt="" class="absolute top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 transition-all duration-500 peer-hover:opacity-0">
+                    <div class="group relative">
+                        <img src="Assets/Images/main/slider3.png" alt="" class="transition-all duration-500 grayscale group-hover:grayscale-0">
+                        <img src="Assets/Images/main/play.svg" alt="" class="absolute top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 transition-all duration-500 group-hover:opacity-0">
+                    </div>
                     <p class="text-white Grotescque-Black">Приключения <br> Дениса Кораблёва</p>
                 </div>
                 <button>
@@ -101,7 +107,7 @@
         </div>
         <div class="flex flex-col gap-[70px] items-center text-center pt-[190px] pb-[70px] bg-white backdrop-blur-[156.25px]">
             <p class="text-[#2B2824] text-[60px] Grotescque-Heavy">Список произведений</p>
-            <ul class="grid grid-cols-3 gap-3 container mx-auto list-disc list-inside text-start">
+            <ul class="grid grid-cols-3 gap-3 container mx-auto list-disc list-inside text-start text-2xl">
                 <li>
                     <a href="" class="absolute text-[#4D4D4D] after:absolute after:left-0 after:bottom-0 after:bg-[#4D4D4D] after:w-0 after:h-px after:transition-all after:duration-500 hover:after:w-full">Англичанин Павля</a>
                 </li> 
@@ -298,7 +304,7 @@
                     <a href="" class="absolute text-[#4D4D4D] after:absolute after:left-0 after:bottom-0 after:bg-[#4D4D4D] after:w-0 after:h-px after:transition-all after:duration-500 hover:after:w-full">Шляпа гроссмейстера</a>
                 </li>                
             </ul>
-            <div class="flex items-center gap-5">
+            <div class="flex items-center gap-5 text-3xl">
                 <div class="text-white bg-[#68645C] transition-all duration-500 hover:bg-[#2B2824] font-semibold group">
                     <a href="" class="px-12 py-6 flex flex-col w-full h-full">
                         <span class="w-fit">Читать онлайн</span>
@@ -324,7 +330,7 @@
                         <img src="Assets/Images/main/avatar.png" alt="">
                         <div class="text-[#2B2824] flex items-end gap-2">
                             <p class="text-[60px] leading-[100.926%] Grotescque-Heavy">Виктор <br> Драгунский</p>
-                            <p class="font-semibold text-[35px]">(1913 - 1972 гг.)</p>
+                            <p class="font-semibold text-[35px] shrink-0">(1913 - 1972 гг.)</p>
                         </div>
                     </div>
                     <p class="text-[#4D4D4D] text-[35px] font-semibold">Писатель-прозаик, поэт, классик советской литературы.</p>
