--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="container mx-auto flex flex-col py-[190px] gap-[70px] items-center">
             <p class="text-[60px] text-[#2B2824] text-center Grotescque-Heavy">“Денискины рассказы”</p>
-            <div class="grid grid-cols-3 gap-3 text-[#4D4D4D] text-[35px] text-center">
+            <div class="grid grid-cols-3 gap-3 text-[#4D4D4D] text-[40px] text-center">
                 <p class="mix-blend-multiply leading-[40px]">Цикл рассказов, посвящённый случаям из жизни дошкольника, а затем ученика младших классов школы Дениса Кораблёва.</p>
                 <p class="mix-blend-multiply leading-[40px]">Прототипом главного героя рассказов стал сын писателя, Денис Драгунский</p>
                 <p class="mix-blend-multiply leading-[40px]">Рассказы являются классикой детской литературы. В 2012 году вошли в список “100 книг для школьников”</p>
@@ -105,9 +105,9 @@
                 <div class="w-[118px] h-[60px] bg-[#AEAEAE] rounded-[11px]"></div>
             </div>
         </div>
-        <div class="flex flex-col gap-[70px] items-center text-center pt-[190px] pb-[70px] bg-white backdrop-blur-[156.25px]">
+        <div class="flex flex-col gap-[70px] items-center text-center pt-[190px] pb-[70px] bg-white backdrop-blur-[156.25px] px-4">
             <p class="text-[#2B2824] text-[60px] Grotescque-Heavy">Список произведений</p>
-            <ul class="grid grid-cols-3 gap-3 container mx-auto list-disc list-inside text-start text-2xl">
+            <ul class="grid grid-cols-3 gap-3 list-disc list-inside text-start text-3xl w-full">
                 <li>
                     <a href="" class="absolute text-[#4D4D4D] after:absolute after:left-0 after:bottom-0 after:bg-[#4D4D4D] after:w-0 after:h-px after:transition-all after:duration-500 hover:after:w-full">Англичанин Павля</a>
                 </li> 
