--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
         <div class="flex flex-col gap-[70px] items-center text-center pt-[190px] pb-[70px] bg-white backdrop-blur-[156.25px] px-4">
             <p class="text-[#2B2824] text-[60px] Grotescque-Heavy">Список произведений</p>
-            <ul class="grid grid-cols-3 gap-3 list-disc list-inside text-start text-3xl w-full">
+            <ul class="grid grid-cols-3 gap-3 list-disc list-inside text-start text-[35pxup] w-full">
                 <li>
                     <a href="" class="absolute text-[#4D4D4D] after:absolute after:left-0 after:bottom-0 after:bg-[#4D4D4D] after:w-0 after:h-px after:transition-all after:duration-500 hover:after:w-full">Англичанин Павля</a>
                 </li> 
