--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
             let animateToggler = document.querySelector("#animateToggler")
             animateToggler.classList.add("hidden")            
 
-            audio.pause()
-            audio.currentTime = 0
-            audio.play()
+            setTimeout(() => {                
+                audio.pause()
+                audio.currentTime = 0
+                audio.play()
+            }, 1300);
             /* let audio = document.createElement('audio');
             audio.style.display = "none";
             audio.src = "Assets/Audio/1.mp3";
